[package]
name = "dstatus"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
ctrlc = { version = "3.2.3", features = ["termination"] }
discord-rich-presence = "0.2.2"

